--- a/vercel.json
+++ b/vercel.json
@@ -3,16 +3,12 @@
   "builds": [
     {
       "src": "./app.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/server.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
-}
